@@ -1,5 +1,5 @@
 /* Hello, Emacs, this is -*-C-*-
- * $Id: gd.trm,v 1.95.2.5 2007/02/01 06:25:41 sfeam Exp $
+ * $Id: gd.trm,v 1.95.2.6 2007/02/02 19:14:47 sfeam Exp $
  * based on gif.trm,v 1.26.2.1 2000/05/01 00:17:20 joze
  */
 
@@ -1974,6 +1974,8 @@ TERM_PUBLIC void
 PNG_image (unsigned M, unsigned N, coordval * image, gpiPoint * corner, t_imagecolor color_mode)
 {
     int m, n, mout, nout;
+    int x1,y1,x2,y2;
+    int xclip1, xclip2, yclip1, yclip2;
     int pixel;
     gdImagePtr im;
 
@@ -2019,6 +2021,14 @@ PNG_image (unsigned M, unsigned N, coordval * image, gpiPoint * corner, t_imagec
 	}
     }
 
+    /* Set clipping bound for area into which we will copy */
+    xclip1 = GPMIN(Y(corner[2].x), Y(corner[3].x));
+    xclip2 = GPMAX(Y(corner[2].x), Y(corner[3].x));
+    yclip1 = GPMIN(Y(corner[2].y), Y(corner[3].y));
+    yclip2 = GPMAX(Y(corner[2].y), Y(corner[3].y));
+    gdImageGetClip(png_state.image, &x1, &y1, &x2, &y2);
+    gdImageSetClip(png_state.image, xclip1, yclip1, xclip2, yclip2);
+
     /* Copy and resize onto requested region of plot */
     /* FIXME - WOULD gdImageCopyResampled() do a nicer job ??? */
     mout = abs( (int)corner[1].x - (int)corner[0].x );
@@ -2030,6 +2040,9 @@ PNG_image (unsigned M, unsigned N, coordval * image, gpiPoint * corner, t_imagec
 	M, N				/* Source Width, Height */
 	);
     gdImageDestroy(im);
+
+    /* Restore previous clipping, if any */
+    gdImageSetClip(png_state.image, x1, y1, x2, y2);
 
 }
 
